--- a/frontend/src/app/shared/components/button/button.html
+++ b/frontend/src/app/shared/components/button/button.html
@@ -2,8 +2,11 @@
 <button 
     [type]="type" 
     [disabled]="disabled"
-    (click)="onCLick()"
+    (click)="onClick()"
     class="app-btn"    
 >
+    @if (icon) {
+        <span class="btn-icon" [innerHTML]="icon"></span>
+    }
     {{ label }}
 </button>
