feat: add height property in content page

--- a/frontend/src/app/features/todo/todo-component/todo-component.html
+++ b/frontend/src/app/features/todo/todo-component/todo-component.html
@@ -1,5 +1,5 @@
 
-<app-page>
+<app-page contentMaxWidth="80%" contentMaxHeight="90%">
     <div class="todo-header">
         <app-title text="TechX To-Do List"></app-title>
         <app-subtitle text="Crie e gerencie suas tarefas"></app-subtitle>
