--- a/frontend/src/app/shared/components/page/page.html
+++ b/frontend/src/app/shared/components/page/page.html
@@ -1,5 +1,8 @@
 <div class="page-container">
-    <div class="page-content" [ngStyle]="{ 'max-width': contentMaxWidth, 'align-items': centered }">
+    <div class="page-content" [ngStyle]="{ 
+        'max-width': contentMaxWidth, 
+        'height': contentMaxHeight, 
+        'align-items': centered }">
         <ng-content></ng-content>
     </div>
 </div>
