--- a/frontend/src/app/features/todo/todo-component/todo-component.html
+++ b/frontend/src/app/features/todo/todo-component/todo-component.html
@@ -1,23 +1,27 @@
 
-<app-page contentMaxWidth="80%" contentMaxHeight="90%">
-    <div class="todo-header">
-        <app-title text="TechX To-Do List"></app-title>
-        <app-subtitle text="Crie e gerencie suas tarefas"></app-subtitle>
-    </div>
+<app-page contentMaxWidth="80%" contentMaxHeight="80%">
+    <div class="todo-container">         
+        <div class="todo-header">
+            <app-title text="TechX To-Do List"></app-title>
+            <app-subtitle text="Crie e gerencie suas tarefas"></app-subtitle>
+        </div>
 
-    <app-input-todo (add)="addTodo($event)"></app-input-todo>
-    
-    <app-todo-list
-        [todos]="todos"
-        (delete)="deleteTodo($event)"
-    >
-    </app-todo-list>
+        <div class="todo-form">
+            <app-input-todo (add)="addTodo($event)"></app-input-todo>
+        </div>
+        
+        <app-todo-list
+            [todos]="todos"
+            (delete)="deleteTodo($event)"
+        >
+        </app-todo-list>
 
-    <div class="footer">
-        <span>Você tem {{ todos.length }} tarefas pendentes</span>
-        <app-button
-            label="Limpar Tudo"
-            (action)="clearAll()"
-        ></app-button>
+        <div class="todo-footer">
+            <span>Você tem {{ todos.length }} tarefas pendentes</span>
+            <app-button
+                label="Limpar Tudo"
+                (action)="clearAll()"
+            ></app-button>
+        </div>
     </div>
 </app-page>
