--- a/frontend/src/app/features/todo/todo-item/todo-item.html
+++ b/frontend/src/app/features/todo/todo-item/todo-item.html
@@ -1,4 +1,4 @@
 <div class="todo-item">
   <span>{{ todo.text }}</span>
-  <app-button icon="'🗑️'" color="red" (click)="onDelete()"></app-button>
+  <app-button [icon]="'🗑️'" color="red" (click)="onDelete()"></app-button>
 </div>
