--- a/frontend/src/app/features/auth/register/register.scss
+++ b/frontend/src/app/features/auth/register/register.scss
@@ -6,3 +6,16 @@
   background: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+.form-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 0.2rem;
+  gap: 2px;
+}
+
+.register-form {
+  margin-top: 3%;
+}
