--- a/frontend/src/app/features/todo/todo-input/todo-input.html
+++ b/frontend/src/app/features/todo/todo-input/todo-input.html
@@ -1,16 +1,9 @@
-<form
-  class="input-todo-form"
-  [formGroup]="form"
-  (ngSubmit)="onSubmit()"
->
-  <custom-input
-    formControlName="text"
-    placeholder="Add your new Todo"
-    type="text">
-  </custom-input>
+<form class="input-todo-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <custom-input formControlName="text" placeholder="Adicione uma nova tarefa" type="text"></custom-input>
 
   <app-button
     type="submit"
-    icon="➕">
+    [icon]="'➕'"
+    [attr.aria-label]="'Adicionar todo'">
   </app-button>
 </form>
