fix: todo input clear value after add a new todo

--- a/frontend/src/app/shared/components/input/form-input.html
+++ b/frontend/src/app/shared/components/input/form-input.html
@@ -6,6 +6,7 @@
     [disabled]="disabled"
     (input)="onChange($event.target.value)"
     (blur)="onTouched()"
+    [(ngModel)]="value"
     class="custom-input"
   />
 </div>
