--- a/frontend/src/app/features/todo/todo-item/todo-item.scss
+++ b/frontend/src/app/features/todo/todo-item/todo-item.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f3f3f3;
+  background: #eeeaea;
   padding: 0.3rem 1rem;
   border-radius: 6px;
   margin-bottom: 0.4rem;
