frontend-feat: apply api router for register

--- a/frontend/src/app/features/auth/components/register/register.html
+++ b/frontend/src/app/features/auth/components/register/register.html
@@ -13,7 +13,7 @@
         </app-form-line>
 
         <app-form-line label="Confirmar Senha">
-            <custom-input formControlName="password" type="password" placeholder="Confirme sua senha" ></custom-input>
+            <custom-input formControlName="confirmPassword" type="password" placeholder="Confirme sua senha" ></custom-input>
         </app-form-line>
 
         <app-button type="submit" label="Cadastrar-se"></app-button>
