--- a/frontend/src/app/features/todo/components/todo-item/todo-item.html
+++ b/frontend/src/app/features/todo/components/todo-item/todo-item.html
@@ -1,4 +1,4 @@
 <div class="todo-item">
-  <span>{{ todo.text }}</span>
+  <span>{{ todo.title }}</span>
   <app-button [icon]="'🗑️'" color="red" (click)="onDelete()"></app-button>
 </div>
