--- a/frontend/src/app/features/todo/components/todo-list/todo-list.html
+++ b/frontend/src/app/features/todo/components/todo-list/todo-list.html
@@ -1,6 +1,6 @@
 
 <div class="list">
-    @for (todo of todos; track todo.id) {
+    @for (todo of todos; track trackById(todo)) {
         <app-todo-item
             [todo]="todo"
             (delete)="delete.emit($event)"
