--- a/frontend/src/app/features/todo/components/todo-list/todo-list.html
+++ b/frontend/src/app/features/todo/components/todo-list/todo-list.html
@@ -1,10 +1,8 @@
-
 <div class="list">
-    @for (todo of todos; track trackById(todo)) {
-        <app-todo-item
-            [todo]="todo"
-            (delete)="delete.emit($event)"
-        >
-        </app-todo-item>
-    }
+  <app-todo-item
+    *ngFor="let todo of todos; trackBy: trackById"
+    [todo]="todo"
+    (delete)="delete.emit($event)"
+  >
+  </app-todo-item>
 </div>
