--- a/frontend/src/app/features/todo/components/todo-input/todo-input.html
+++ b/frontend/src/app/features/todo/components/todo-input/todo-input.html
@@ -1,9 +1,13 @@
 <form class="input-todo-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <custom-input formControlName="text" placeholder="Adicione uma nova tarefa" type="text"></custom-input>
+  <custom-input
+    formControlName="text"
+    placeholder="Adicione uma nova tarefa"
+    type="text"
+  ></custom-input>
 
   <app-button
     type="submit"
-    [icon]="'➕'"
-    [attr.aria-label]="'Adicionar todo'">
-  </app-button>
+    [icon]="'add'"
+    [attr.aria-label]="'Adicionar todo'"
+  ></app-button>
 </form>
