--- a/frontend/src/app/shared/components/input/form-input.scss
+++ b/frontend/src/app/shared/components/input/form-input.scss
@@ -14,7 +14,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0.75rem 1rem;
-  border: 1px solid #ddd;
+  border: 1px solid #dbc2c2;
   border-radius: 8px;
   font-size: 1rem;
   background-color: #F1E7EA;
