frontend-feat: add checkbox component

--- a/frontend/src/app/features/todo/components/todo-item/todo-item.html
+++ b/frontend/src/app/features/todo/components/todo-item/todo-item.html
@@ -17,7 +17,7 @@
   <div class="item-buttons">
     <app-button
       [icon]="editing ? 'save' : 'edit'"
-      (click)="editing ? saveEdit.emit(editTitle) : startEdit()"
+      (click)="editing ? save() : startEdit()"
       type="button"
       class="small-btn"
     ></app-button>
