--- a/frontend/src/app/features/todo/components/todo-list/todo-list.html
+++ b/frontend/src/app/features/todo/components/todo-list/todo-list.html
@@ -3,7 +3,7 @@
     *ngFor="let todo of todos"
     [todo]="todo"
     (delete)="delete.emit($event)"
-    (toggleComplete)="toggleComplete.emit({ todo, completed: $event })"
+    (toggleComplete)="toggleComplete.emit({ todo, completed: $event.completed })"
     (saveEdit)="saveEdit.emit({ todo, title: $event })"
   ></app-todo-item>
 </div>
