frontend-feat: sort todos by completed state and sorte pending todos

--- a/frontend/src/app/features/todo/components/todo-component/todo-component.html
+++ b/frontend/src/app/features/todo/components/todo-component/todo-component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="todo-footer">
-            <span>Você tem {{ todos.length }} tarefas pendentes</span>
+            <span>Você tem {{ pendingCount }} tarefas pendentes</span>
             <app-button
                 label="Limpar Tudo"
                 (action)="clearAll()"
