--- a/frontend/src/app/features/todo/components/todo-item/todo-item.html
+++ b/frontend/src/app/features/todo/components/todo-item/todo-item.html
@@ -20,6 +20,7 @@
       (click)="editing ? save() : startEdit()"
       type="button"
       class="small-btn"
+      [disabled]="todo.completed" 
     ></app-button>
 
     <app-button
