--- a/frontend/src/app/features/todo/components/todo-item/todo-item.scss
+++ b/frontend/src/app/features/todo/components/todo-item/todo-item.scss
@@ -9,12 +9,12 @@
   transition: opacity 0.2s ease, background-color 0.2s ease;
 
   &.completed {
-    opacity: 0.6; // deixa o item mais "apagado"
+    opacity: 0.6;
     background: #e3e3e3;
 
     .todo-title {
-      text-decoration: line-through; // risco no texto
-      color: #888; // cor mais suave
+      text-decoration: line-through; 
+      color: #888;
     }
   }
 }
