--- a/frontend/src/app/features/todo/components/todo-component/todo-component.scss
+++ b/frontend/src/app/features/todo/components/todo-component/todo-component.scss
@@ -11,12 +11,21 @@
 }
 
 .todo-header {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 4px;
   text-align: center;
-  margin-bottom: 0.2rem;
-  gap: 2px;
+}
+
+.header-top {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.spacer {
+  flex: 1;
 }
 
 .todo-form {
